Carga correcta agenda y servicios

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -71,6 +71,6 @@
   </div>
 
   <div class="footer__copy">
-    © {{ currentYear }} Kairós · Hecho con calma.
+    © {{ currentYear }} Kairós
   </div>
 </footer>
