--- a/src/app/pages/servicios/servicios.component.html
+++ b/src/app/pages/servicios/servicios.component.html
@@ -11,7 +11,7 @@
       <a routerLink="/comunidad" class="btn btn-ghost">Unirme a la Comunidad</a>
     </div>
 
-    <small class="note">Talleres y charlas de bienestar. No psicoterapia clínica.</small>
+    <small class="note">Talleres y charlas de bienestar.</small>
   </div>
 </section>
 
