--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -2,9 +2,7 @@
   <div class="container footer__grid">
     <!-- Marca y tagline -->
     <div class="footer__brand">
-      <div class="footer__logo">
-        <img src="/assets/logoKairos.png" alt="Kairós" />
-      </div>
+      <!-- Logo eliminado -->
       <div>
         <div class="font-cinzel footer__title">Kairós</div>
         <p class="footer__tagline">
