--- a/src/app/pages/servicios/servicios.component.html
+++ b/src/app/pages/servicios/servicios.component.html
@@ -158,7 +158,7 @@
       <article class="faq-item" [class.open]="openIndex===3">
         <button class="faq-q" (click)="toggleFaq(3)">¿Qué necesito llevar a los talleres?</button>
         <div class="faq-a">
-          <p>Nada especial: ropa cómoda. El material lo ponemos nosotros. Si es actividad en suelo, disponemos de esterillas y mantas.</p>
+          <p>Nada especial: ropa cómoda. El material lo ponemos nosotros. Si es actividad en suelo, recuerda traer tu propia esterilla y manta.</p>
         </div>
       </article>
     </div>
